# pcs

./: README.md  index.html
C++/: .gitignore  CMakeLists.txt  main.cpp
C++/input_files/: bad_input_1.txt  definitive_Polygon_input.txt
C++/src/: AdvancedMesh.cpp  AdvancedMesh.hpp  AdvancedPolygonViewer.cpp  AdvancedPolygonViewer.hpp  DataSet.hpp  EmptyClass.cpp  EmptyClass.hpp  GeometryCore.hpp  GeometryFactory.cpp  GeometryFactory.hpp  PolygonAdvanced.cpp  PolygonAdvanced.hpp  PolygonConcaveCutter.cpp  PolygonConcaveCutter.hpp  PolygonConvexCutter.cpp  PolygonConvexCutter.hpp  PolygonEdit.cpp  PolygonEdit.hpp  PolygonViewer.cpp  PolygonViewer.hpp  ReferenceElt.cpp  ReferenceElt.hpp  SegmentIntersector.cpp  SegmentIntersector.hpp  Toolbox_class.hpp
C++/test/: test_ConcaveAdvanced1Cut.hpp  test_ConcaveAdvanced2Cut.hpp  test_ConcavePolygonCut.hpp  test_DefinitivePolygonCut.hpp  test_MeshConcaveAdvanced.hpp  test_MeshConcavePolygon.hpp  test_MeshDefinitive.hpp  test_MeshExagon.hpp  test_MeshPentagon.hpp  test_MeshPentagonCut.hpp  test_MeshPentagonPolygon.hpp  test_MeshTrianglePolygon.hpp  test_PentagonCut.hpp  test_Pippo.hpp  test_PolygonCutter.hpp  test_PolygonCutterAlpha.hpp  test_RectangleCut.hpp  test_TriangleCut.hpp  test_TriangleCutMESH.hpp  test_emptyclass.hpp  test_geometryfactory.hpp  test_star.hpp  test_viewer.hpp
Documentation/: Presentazione Progetto.pptx
Documentation/Polygon_Cut/: README.md  polygon_cut.html
Documentation/Polygon_Cut/Images/: plantuml_1.txt
Documentation/Polygon_Mesh/: README.md  polygon_mesh.html
Documentation/Polygon_Mesh/Images/: plantuml_2-3.txt
Python/: .gitignore  main.py
Python/input_files/: bad_input_2.txt  bad_input_3.txt  concave_polygon_input.txt  input.txt  rectangle_input.txt
Python/src/: __init__.py  dataset.py  geometry_core.py  geometry_factory.py  polygon_concave_cutter.py  polygon_convex_cutter.py  polygon_edit.py  polygon_viewer.py  segment_intersector.py
Python/test/: concave_advanced_1_input.txt  concave_advanced_2_input.txt  pentagon_input.txt  test_concave_advanced_1_test.py  test_concave_advanced_2_test.py  test_concave_polygon_cut.py  test_definitive_polygon_cut.py  test_geometryfactory.py  test_pentagon_cut.py  test_rectangle_cut.py  test_triangle_cut.py  test_viewer.py  triangle_input.txt  view_concave.m  view_concave_advanced_1.m  view_concave_advanced_2.m  view_definitive_polygon.m  view_line.m  view_line_concave.m  view_line_concave_advanced_1.m  view_line_concave_advanced_2.m  view_line_rectangle.m  view_line_triangle.m  view_pentagon.m  view_rectangle.m  view_triangle.m
